Update Avada CSS Mobile and Privacy.html
Updated the comment code at start

--- a/Avada CSS Mobile and Privacy.html
+++ b/Avada CSS Mobile and Privacy.html
@@ -1,6 +1,8 @@
-/* Fix for mobile and privacy menu not working on iPhones */
-/* Code complied by HiTechMadeEZ.com 15 Jan 2024 */
-/* V1 */
+<!-- 
+Fix for mobile and privacy menu not working on iPhones
+Code complied by HiTechMadeEZ.com 15 Jan 2024
+Version V1 
+-->
 /* General styles for safari overflow issue */
 .safari-overflow .fusion-fullwidth {
     overflow-x: visible;
